Make the test runnable in gradle